# agentchat-hermes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  __init__.py  after-install.md  plugin.yaml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  e2e.yml  publish.yml
agentchatme_hermes/: __init__.py  _register.py  _version.py  adapter.py  agent_invoker.py  cli.py  config.py  leader_lock.py  message_queue.py  metrics.py  plugin.yaml  prompts.py  runtime.py  setup.py  soul_anchor.py  tools.py  types.py  version.py  wizard.py  ws_daemon.py
agentchatme_hermes/skills/: SKILL.md  __init__.py
agentchatme_hermes/skills/agentchat/: SKILL.md
agentchatme_hermes/tools/: __init__.py  _common.py  attachments.py  contacts.py  conversations.py  directory.py  groups.py  messages.py  mutes.py  presence.py  profile.py
scripts/: e2e_harness.py  hermes-pilot-bootstrap.sh  install-hermes-remote.sh
tests/: test_agent_invoker.py  test_allow_all_default.py  test_cli_validation.py  test_config.py  test_defensive_init.py  test_dm_routing.py  test_error_envelope.py  test_group_routing.py  test_idempotency.py  test_inbound_envelope.py  test_install_shim.py  test_leader_lock.py  test_message_queue.py  test_message_tool_only.py  test_package_imports.py  test_register.py  test_runtime.py  test_setup_validation.py  test_share_api_key.py  test_skill_registration.py  test_smoke_live.py  test_soul_anchor.py  test_standalone_send.py  test_tool_common.py  test_tool_wrapper_signature.py  test_types.py  test_ux_parity.py  test_wizard.py  test_ws_daemon.py  test_ws_url_conversion.py
